--- a/styles/style.css
+++ b/styles/style.css
@@ -44,7 +44,7 @@ img {
 /* style start */
 
 .container {
-    margin: 5rem 5rem;
+    margin: 10rem;
 }
 
 .hero {
@@ -181,13 +181,25 @@ img {
 .develop-back {
     width: 90%;
     margin-left: 5rem;
+    position: relative;
+}
+
+.develop-back .shap-1 {
+    width: 20%;
+    position: absolute;
+    z-index: -1;
+    top: 9rem;
+    bottom: 0rem;
+    left: -9rem;
+    right: 0;
 }
 
 .develop {
     display: flex;
-    gap: 2.5rem;
+    gap: 4.5rem;
     align-items: center;
     width: 100%;
+    z-index: 100;
 }
 
 /* image  */
@@ -206,7 +218,7 @@ img {
     font-size: 1.8rem;
     font-weight: 400;
     color: rgba(62, 62, 62, 1);
-    width: 70%;
+    /* width: 70%; */
     line-height: 3rem;
     margin: 2.5rem 0;
 }
@@ -216,7 +228,7 @@ img {
     font-size: 1.6rem;
     font-weight: 500;
     text-align: center;
-    width: 30%;
+    width: 40%;
     background-color: rgba(255, 89, 89, 1);
     color: white;
     border-radius: 0.5rem;
