--- a/styles/style.css
+++ b/styles/style.css
@@ -36,10 +36,6 @@ button {
     font-size: 2rem;
 }
 
-img {
-    width: 50%;
-}
-
 
 /* style start */
 
@@ -62,8 +58,7 @@ img {
 }
 
 .hero .hero-img img {
-    width: 42rem;
-    height: 45rem;
+    width: 80%;
 }
 
 .hero .hero-banner {
@@ -141,9 +136,7 @@ img {
 }
 
 .mission .mission-1 img {
-    width: 13rem;
-    height: 13rem;
-    margin: 0 auto;
+    width: 50%;
 }
 
 .mission .mission-2 {
@@ -152,10 +145,8 @@ img {
     padding: 3rem;
 }
 
-.mission .mission-3 img {
-    width: 13rem;
-    height: 13rem;
-    margin: 0 auto;
+.mission .mission-2 img {
+    width: 50%;
 }
 
 .mission .mission-3 {
@@ -164,16 +155,21 @@ img {
     padding: 3rem;
 }
 
-.mission .mission-1 img {
-    width: 13rem;
-    height: 13rem;
-    margin: 0 auto;
+.mission .mission-3 img {
+    width: 50%;
 }
 
 .mission .mission-detail h2 {
     font-size: 2.5rem;
     font-weight: 600;
     margin: 2rem auto;
+}
+
+.mission .mission-detail p {
+    font-size: 1.6rem;
+    font-weight: 400;
+    margin: 2rem auto;
+    color: rgba(62, 62, 62, 1);
 }
 
 /* develop style  */
@@ -185,12 +181,12 @@ img {
 }
 
 .develop-back .shap-1 {
-    width: 20%;
+    width: 15%;
     position: absolute;
     z-index: -1;
-    top: 9rem;
+    top: 13rem;
     bottom: 0rem;
-    left: -9rem;
+    left: -8rem;
     right: 0;
 }
 
@@ -232,4 +228,58 @@ img {
     background-color: rgba(255, 89, 89, 1);
     color: white;
     border-radius: 0.5rem;
+}
+
+
+/* community section  */
+
+.community-back {
+    position: relative;
+}
+
+.community-back .community-shape1 {
+    width: 10%;
+    position: absolute;
+    /* top: 0; */
+    bottom: -4.5rem;
+    /* left: 0; */
+    right: -5.5rem;
+    z-index: -1;
+}
+
+
+.community {
+    display: flex;
+    flex-direction: row-reverse;
+    gap: 4rem;
+    align-items: center;
+}
+
+.community .community-detail h1 {
+    font-size: 3.5rem;
+    font-weight: 700;
+}
+
+.community .community-detail h4 {
+    font-size: 1.8rem;
+    font-weight: 400;
+    color: rgba(62, 62, 62, 1);
+    /* width: 70%; */
+    line-height: 3rem;
+    margin: 2.5rem 0;
+}
+
+.community .community-detail button {
+    font-family: 'roboto';
+    font-size: 1.6rem;
+    font-weight: 500;
+    text-align: center;
+    width: 40%;
+    background-color: rgba(255, 89, 89, 1);
+    color: white;
+    border-radius: 0.5rem;
+}
+
+.community .community-img img {
+    width: 100%;
 }
