--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Yeseva+One&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lobster&family=Yeseva+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Manrope&family=Yeseva+One&display=swap');
 
 * {
     margin: 0;
@@ -366,4 +368,29 @@ button {
     background-color: rgba(255, 89, 89, 1);
     color: white;
     border-radius: 0.5rem;
+}
+
+.footer {
+    width: 100%;
+    height: 20rem;
+    background-color: #0B0D17;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.footer h1 {
+    font-family: 'Lobster';
+    font-size: 3.5rem;
+    color: white;
+}
+
+.footer h1 span {
+    color: rgba(255, 89, 89, 1);
+}
+
+.footer h4 {
+    font-family: 'Manrope';
+    color: #D9DBE1;
 }
